--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,5 +2,7 @@
 <%-include('layouts/header.ejs')%>
 
     <h2>메인페이지 입니다.</h2>
+    <!-- app.js에서 __dirname+'/public' 라고 지정을 했기 때문에 -->
+    <img src="/image/image.png"> 
 
 <%-include('layouts/footer.ejs')%>
