--- a/views/contactList.ejs
+++ b/views/contactList.ejs
@@ -11,6 +11,7 @@
             <th>memo</th>
             <th>create_at</th>
             <th>modify_at</th>
+            <th>DELETE</th>
         </tr>
         
         <% lists.forEach(function(item) { %> <!-- ejs문법 / 반복하기 위해 사용 -->
@@ -22,6 +23,12 @@
             <td><%=item.memo%></td>
             <td><%=item.craete_at%></td>
             <td><%=item.modify_at%></td>
+            <td>
+                <!-- form 태그는 get과 post만 지원 -->
+                <from action="/api/contactDelete/<%=item.id%>" method="post">
+                    <button type="submit" onclick="return confirm('정말 삭제하시겠습니까?')"> DELETE </button>
+                </from>
+            </td>
         </tr>
         <% }) %> <!-- ejs문법 -->
     </table>
