--- a/views/contactList.ejs
+++ b/views/contactList.ejs
@@ -11,6 +11,7 @@
             <th>memo</th>
             <th>create_at</th>
             <th>modify_at</th>
+            <th>UPDATE</th>
             <th>DELETE</th>
         </tr>
         
@@ -21,8 +22,15 @@
             <td><%=item.phone%></td>
             <td><%=item.email%></td>
             <td><%=item.memo%></td>
+            <td><%=item.status%></td>
             <td><%=item.craete_at%></td>
             <td><%=item.modify_at%></td>
+            <td>
+                <!-- form 태그는 get과 post만 지원 -->
+                <from action="/api/contactUpdate/<%=item.id%>" method="post">
+                    <button type="submit" onclick="return confirm('메모를 확인하셨습니까?')"> DELETE </button>
+                </from>
+            </td>
             <td>
                 <!-- form 태그는 get과 post만 지원 -->
                 <from action="/api/contactDelete/<%=item.id%>" method="post">
