--- a/views/contactList.ejs
+++ b/views/contactList.ejs
@@ -25,9 +25,9 @@
             <td><%=item.modify_at%></td>
             <td>
                 <!-- form 태그는 get과 post만 지원 -->
-                <from action="/api/contactDelete/<%=item.id%>" method="post">
+                <form action="/api/contactDelete/<%=item.id%>" method="post">
                     <button type="submit" onclick="return confirm('정말 삭제하시겠습니까?')"> DELETE </button>
-                </from>
+                </form>
             </td>
         </tr>
         <% }) %> <!-- ejs문법 -->
