--- a/views/contactList.ejs
+++ b/views/contactList.ejs
@@ -9,6 +9,7 @@
             <th>phone</th>
             <th>email</th>
             <th>memo</th>
+            <th>status</th>
             <th>create_at</th>
             <th>modify_at</th>
             <th>UPDATE</th>
@@ -23,12 +24,12 @@
             <td><%=item.email%></td>
             <td><%=item.memo%></td>
             <td><%=item.status%></td>
-            <td><%=item.craete_at%></td>
+            <td><%=item.create_at%></td>
             <td><%=item.modify_at%></td>
             <td>
                 <!-- form 태그는 get과 post만 지원 -->
-                <form action="/api/contactDelete/<%=item.id%>" method="post">
-                    <button type="submit" onclick="return confirm('메모를 확인하셨습니까?')"> DELETE </button>
+                <form action="/api/contactUpdate/<%=item.id%>" method="post">
+                    <button type="submit" onclick="return confirm('메모를 확인하셨습니까?')"> UPDATE </button>
                 </form>
             </td>
             <td>
