--- a/views/contactList.ejs
+++ b/views/contactList.ejs
@@ -27,19 +27,51 @@
             <td><%=item.create_at%></td>
             <td><%=item.modify_at%></td>
             <td>
-                <!-- form 태그는 get과 post만 지원 -->
-                <form action="/api/contactUpdate/<%=item.id%>" method="post">
-                    <button type="submit" onclick="return confirm('메모를 확인하셨습니까?')"> UPDATE </button>
-                </form>
+                <button type="button" onclick="updateContact(<%=item.id%>)"> UPDATE </button>
+                <!-- <%= %> 표현식 관련 Expression express 오류 관련 (아래처럼 수정 가능) -->
+                <!-- <button type="button" data-id="<%= item.id %>" onclick="updateContact(this.dataset.id)"> UPDATE </button> -->  <!-- 방법1 -->
+                <!-- <button type="button" data-contactId="<%= item.id %>" onclick="updateContact(this.dataset.contactId)"> UPDATE </button>--> <!-- 방법2 --> 
             </td>
             <td>
-                <!-- form 태그는 get과 post만 지원 -->
-                <from action="/api/contactDelete/<%=item.id%>" method="post">
-                    <button type="submit" onclick="return confirm('정말 삭제하시겠습니까?')"> DELETE </button>
-                </form>
+                <button type="button" onclick="deleteContact(<%=item.id%>)"> DELETE </button>
             </td>
         </tr>
         <% }) %> <!-- ejs문법 -->
     </table>
+    
+    <script>
+        function updateContact(contactId) {
+            // AJAX를 사용하여 PUT 요청 보내기
+            $.ajax({
+                url: `/api/contactUpdate/${contactId}`, 
+                type: 'PUT',
+                success: function(response) {
+                    // 수정 성공 시
+                    alert("문의사항의 상태가 변경되었습니다.")
+                    location.reload(); // 새로고침
+                },
+                error: function(error) {
+                    // 오류 처리
+                    console.error("업데이트 오류 : ", error)
+                }
+            })
+        }
+
+        function deleteContact(contactId) {
+            $.ajax({
+                url: `/api/contactDelete/${contactId}`, 
+                type: 'DELETE',
+                success: function(response) {
+                    // 수정 성공 시
+                    alert("문의사항이 삭제되었습니다.")
+                    location.reload(); // 새로고침
+                },
+                error: function(error) {
+                    // 오류 처리
+                    console.error("삭제 오류 : ", error)
+                }
+            })
+        }
+    </script>
 
 <%-include('layouts/footer.ejs')%>
