--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,7 +1,13 @@
-<footer>
-    <hr>
-    copyright name all right reserved.
+<footer class="container-fluid text-center">
+    <a href="#myPage" title="To Top">
+    <span class="glyphicon glyphicon-chevron-up"></span>
+    </a>
+    <p>
+        <b>© 2025. huijeong, 이 페이지는 아직도 실험 중! 🔧</b><br>
+        "나도 몰라, 그냥 열심히 만들고 있을 뿐이야. 🤷‍♂️"<br>
+        "궁금하면 계속 지켜봐 주세요! 😎"
+    </p>
 </footer>
 </body>
-
 </html>
+
