--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
-    <!-- jQuery 추가 -->
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <title>실험중인 페이지🤷‍♂️</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
 </head>
-
-<body>
-    <h1> 홈페이지에 오신 것을 환영합니다. </h1>
-    <header style="border-bottom: 1px solid lightgray; margin-bottom: 10px; padding-bottom: 10px;">
-        <nav>
-            <a href="/">홈</a>
-            <a href="/profile">프로필</a>
-            <a href="/visit">찾아오시는길</a>
-            <a href="/blog">블로그</a>
-            <a href="/users">회원</a>
-            <a href="/contact">문의하기</a>
-            <a href="/contactList">문의목록보기</a>
-        </nav>
-    </header>
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarContent">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#myPage">HOME</a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarContent">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#list">LIST</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+      
+      <div class="jumbotron text-center">
+        <h1>여긴 무슨 페이지일까?</h1> 
+        <p>나도 몰라, 나도 만들어 보고 있어..</p> 
+      </div>
