--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,80 @@
-<!-- Shift + Art + F : 코드정렬 -->
 <%-include('layouts/header.ejs')%>
 
-    <h2>메인페이지 입니다.</h2>
-    <!-- app.js에서 __dirname+'/public' 라고 지정을 했기 때문에 -->
-    <img src="/image/image.png"> 
+<!-- List Section -->
+<div id="list" class="container-fluid">
+    <div class="text-center">
+        <h2>Contact List</h2>
+    </div>
+    <div class="row slideanim">
+        <div class="col-sm-12">
+            <div class="panel-body">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Phone</th>
+                            <th>Email</th>
+                            <th>Memo</th>
+                            <th>Status</th>
+                            <th>Created At</th>
+                            <th>Modified At</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% lists.forEach(function(item) { %>
+                        <tr>
+                            <td><%= item.id %></td>
+                            <td><%= item.name %></td>
+                            <td><%= item.phone %></td>
+                            <td><%= item.email %></td>
+                            <td><%= item.memo %></td>
+                            <td class="center"><%= item.status %></td>
+                            <td class="center"><%= item.create_at %></td>
+                            <td class="center"><%= item.modify_at %></td>
+
+                            <td class="center">
+                                <button class="btn btn-info" onclick="updateContact(<%= item.id %>)">Update</button>
+                                <button class="btn btn-danger" onclick="deleteContact(<%= item.id %>)">Delete</button>
+                            </td>
+                        </tr>
+                        <% }); %>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Contact Section -->
+<div id="contact" class="container-fluid bg-grey">
+    <h2 class="text-center">Contact Me</h2>
+    <div class="row">
+        <div class="col-sm-5">
+            <p>Feel free to reach out for any inquiries.</p>
+            <p><span class="glyphicon glyphicon-map-marker"></span> Sejong, Jochiwon</p>
+            <p><span class="glyphicon glyphicon-phone"></span> +82 10-2345-6789</p>
+            <p><span class="glyphicon glyphicon-envelope"></span> huihee@g.hongik.ac.kr</p>
+        </div>
+        <div class="col-sm-7 slideanim">
+            <form id="contactForm">
+                <div class="form-group">
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
+                </div>
+                <div class="form-group">
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
+                </div>
+                <div class="form-group">
+                    <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone">
+                </div>
+                <div class="form-group">
+                    <textarea class="form-control" id="comments" name="memo" placeholder="Comments" rows="5"></textarea>
+                </div>
+                <button type="submit" class="btn btn-default pull-right" onclick="createContact()">Send</button>
+            </form>
+        </div>
+    </div>
+</div>
 
 <%-include('layouts/footer.ejs')%>
