style : 상태가 done일 경우 행 색상 변경 추가

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -191,6 +191,10 @@ th {
   text-align: center; /* 가운데 정렬 */
 }
 
+tr.done {
+  background-color: #dceafc !important;
+}
+
 @keyframes slide {
   0% {
     opacity: 0;
